# pyron

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
pyron/: __main__.py  config.py  memory_manager.py
pyron/agent/: agent.py  code_analyzer.py  memory.py  planning.py  reflection.py  tools.py
pyron/api/: client.py
pyron/cli/: terminal.py
pyron/gui/: app.py
