[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyron"
version = "2.2.0"
description = "Pyron - Autonomous AI Agent with Hierarchical Memory (~1M tokens effective context)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Llucs", email = "c307lucas@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/Llucs/pyron"

[project.scripts]
pyron = "pyron.__main__:main"

[tool.setuptools.packages.find]
include = ["pyron*"]
